tests/b_invalid/literal_prefixes.ri
proc main() {
    _ = b'A'; // OK
    _ = c'B'; // FAIL

    _ = c"C string"; // OK
    _ = b"Byte string"; // OK
    _ = r"Raw string"; // OK

    _ = v"V string"; // FAIL
}
